--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,13 @@
+
 body {
-    
-}
+    text-align: justify;
+    background-color: black;
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  h2 {
+    text-align: right;
+  }
