--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 
 body {
     text-align: justify;
-    background-color: black;
+   
   }
   
   h1 {
@@ -9,5 +9,5 @@ body {
   }
   
   h2 {
-    text-align: right;
+    text-align: center;
   }
