--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Fredoka one";
+  src: url("fonts/FredokaOne-Regular.ttf");
+}
 
 body {
     text-align: justify;
@@ -6,20 +10,19 @@ body {
   
   h1 {
     text-align: center;
+    font-family: "Fredoka one";
   }
   
-  h2 {
+  h2{
     text-align: center;
   }
+  
+  
   html {
-    background: rgb(46, 48, 48) url("/home/erinec/Documents/html-cs/IMG/ej.jpeg");
-    background-repeat: no-repeat;
-    background-size: 1000px;
+    background: black
   }  
 
-
-
-  
+ 
   
   
   
