--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,7 @@ body {
   }
   
   html {
-    background: url("/home/erinec/Documents/html-cs/IMG/GYM.jpeg");
+    background: url("");
     background-repeat: no-repeat;
     background-size: 750px;
 
@@ -27,9 +27,44 @@ body {
   }
     
  
-  div { display: flex; }
+  p.p1 {
+    background-color: yellow;
+    height: 350px;
+    left: 50px;
+    position: relative;
+    top: 0;
+    width: 350px;
+    z-index: 2;
+  }
+  p.p1{
+    float: left;
+  }
+  
+  p.p2 {
+    background-color: #40ff00;
+    height: 350px;
+    left: 0;
+    position: relative;
+    top: -50px;
+    width: 350px;
+    z-index: 1;
+  }
+  p.p2{
+  float: right;
 
-p { flex: 1; border: black 1px solid; margin: 2px; }
+  p.p3{
+    background-color: #40ff00;
+    height: 350px;
+    left: 0;
+    position: relative;
+    top: -50px;
+    width: 350px;
+    z-index: 1;
+  }
+  p.p3{
+    float: center;
+  }
+}
 
   
   
