--- a/estilo.css
+++ b/estilo.css
@@ -3,68 +3,56 @@
   src: url("fonts/FredokaOne-Regular.ttf");
 }
 
-body {
-    text-align: justify;
-   color: black;
-  }
-  
-  h1 {
-    text-align: center;
-    font-family: "Fredoka one";
-  }
-  
-  h2{
-    text-align: center;
-  }
-  
-  html {
-    background: url("");
-    background-repeat: no-repeat;
-    background-size: 750px;
-
+  body {
+      text-align: justify;
+    color: white;
+    }
     
-
-  }
+    h1 {
+      text-align: center;
+      font-family: "Fredoka one";
+    }
     
- 
-  p.p1 {
-    background-color: yellow;
-    height: 350px;
-    left: 50px;
-    position: relative;
-    top: 0;
-    width: 350px;
-    z-index: 2;
-  }
-  p.p1{
-    float: left;
-  }
-  
-  p.p2 {
-    background-color: #40ff00;
-    height: 350px;
-    left: 0;
-    position: relative;
-    top: -50px;
-    width: 350px;
-    z-index: 1;
-  }
-  p.p2{
-  float: right;
+    h2{
+      text-align: center;
+    }
+    
+    html {
+      background: url("");
+      background-repeat: no-repeat;
+      background-size: 750px;
+      background-color: black;
 
-  p.p3{
-    background-color: #40ff00;
-    height: 350px;
-    left: 0;
-    position: relative;
-    top: -50px;
-    width: 350px;
-    z-index: 1;
+      
+
+    }
+      
+  
+    div.p1 {
+      background-color: #ffffeb;
+      height: 350px;
+      width: 350px;
+      margin: 30px;
+    }
+    div.p3{
+      background-color: #d8af97;
+      height: 350px;
+      width: 350px;
+      margin: 30px;
+
+    }
+    div.p2 {
+      background-color: #ecd6c0;
+      height: 350px;
+      width: 350px; 
+      margin: 30px;
+
   }
-  p.p3{
-    float: center;
+  div.fila {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
-}
 
   
   
