--- a/estilo.css
+++ b/estilo.css
@@ -18,9 +18,9 @@
     }
     
     html {
-      background: url("");
+      background: url("IMG/man-person-structure-people-equipment-room-825379-pxhere.com.jpg");
       background-repeat: no-repeat;
-      background-size: 750px;
+      background-size: 2000px;
       background-color: black;
 
       
