--- a/estilodef.css
+++ b/estilodef.css
@@ -5,7 +5,7 @@
   
   body {
       text-align: justify;
-     color: white;
+     color: black;
     }
     
     h1 {
@@ -19,5 +19,8 @@
     
     
     html {
-      background: black
+      background: url("IMG/def2.png");
+      background-repeat: no-repeat;
+      background-size: 2000px;
+
     }  
